2.0-kripken/build/testatomic.c.log
[1m../SDL-2.0.0/testatomic.c:146:42: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
        SDL_CreateThread(adder, "Adder", NULL);
[0;1;32m        ~~~~~~~~~~~~~~~~                 ^~~~
[0m[1m/home/tobias/dev/emscripten/system/include/libc/stddef.h:4:14: [0m[0;1;30mnote: [0mexpanded from macro 'NULL'[0m
#define NULL 0L
[0;1;32m             ^~
[0m[1m/home/tobias/dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m[1m../SDL-2.0.0/testatomic.c:620:55: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
        SDL_CreateThread(FIFO_Watcher, "FIFOWatcher", &queue);
[0;1;32m        ~~~~~~~~~~~~~~~~                              ^~~~~~
[0m[1m/home/tobias/dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m[1m../SDL-2.0.0/testatomic.c:633:45: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
        SDL_CreateThread(FIFO_Reader, name, &readerData[i]);
[0;1;32m        ~~~~~~~~~~~~~~~~                    ^~~~~~~~~~~~~~
[0m[1m/home/tobias/dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m[1m../SDL-2.0.0/testatomic.c:646:45: [0m[0;1;31merror: [0m[1mtoo many arguments to function call, expected 2, have 3[0m
        SDL_CreateThread(FIFO_Writer, name, &writerData[i]);
[0;1;32m        ~~~~~~~~~~~~~~~~                    ^~~~~~~~~~~~~~
[0m[1m/home/tobias/dev/emscripten/system/include/SDL/SDL_thread.h:141:1: [0m[0;1;30mnote: [0m'SDL_CreateThread' declared here[0m
extern DECLSPEC SDL_Thread *SDLCALL
[0;1;32m^
[0m4 errors generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
